- Fix NPC shops (potion selling) for the declarative shop system.