@@ -2,6 +2,7 @@
 using Mono.Cecil.Cil;
 using MonoMod.Cil;
 using Terraria;
+using Terraria.ID;
 using Terraria.ModLoader;
 
 namespace CalamityQOL.Fixes;
@@ -42,6 +43,30 @@ public class ILEdits : ModSystem {
             CalamityQOLMod.i.Logger.Warn("Failed to locate daytime check (Main.eclipse)");
         }
     }
+    
+    //IL_14f7: ldloca.s     button
+    //IL_14f9: ldloca.s     button2
+    //IL_14fb: call         void Terraria.ModLoader.NPCLoader::SetChatButtons(string&, string&)
+    private static void NPCButtonPatch(ILContext il) {
+        // local indexes for the two buttons
+        int button1idx = 11;
+        int button2idx = 12;
+        int bullshitVariable;
+        var ilCursor = new ILCursor(il);
+        if (ilCursor.TryGotoNext(MoveType.After, i => {
+                bullshitVariable = 0;
+                return i.MatchCall(typeof(NPCLoader), "SetChatButtons");
+            })) {
+            // call         void Terraria.Main::UpdateTime_SpawnTownNPCs()
+            ilCursor.Emit(OpCodes.Ldloca, button1idx);
+            ilCursor.Emit(OpCodes.Ldloca, button2idx);
+            ilCursor.Emit<QOLHooks>(OpCodes.Call, "SetChatButtons");
+        }
+        else {
+            CalamityQOLMod.i.Logger.Warn("Failed to locate tModLoader SetChatButtons (in Main.GUIChatDrawInner)");
+        }
+    }
+    
 
     public static void load() {
         if (QOLConfig.Instance.wellFedPatch) {
@@ -51,10 +76,33 @@ public class ILEdits : ModSystem {
         if (QOLConfig.Instance.townNPCsAtNight) {
             IL_Main.UpdateTime += townNPCPatch;
         }
+
+        if (QOLConfig.Instance.recipeBrowser) {
+            IL_Main.GUIChatDrawInner += NPCButtonPatch;
+        }
     }
 
     public static void unload() {
         IL_Player.UpdateLifeRegen -= wellFedPatch;
         IL_Main.UpdateTime -= townNPCPatch;
+        IL_Main.GUIChatDrawInner -= NPCButtonPatch;
     }
+}
+
+public class QOLHooks {
+    private static void SetChatButtons(ref string button, ref string button2) {
+        SetChatButtons(Main.npc[Main.player[Main.myPlayer].talkNPC], ref button, ref button2);
+    }
+
+    public static void SetChatButtons(NPC npc, ref string button, ref string button2) {
+        
+        if (!QOLConfig.Instance.recipeBrowser) {
+            return;
+        }
+
+        if (npc.type == NPCID.Merchant) {
+            button2 = "Recipes";
+        }
+    }
+    
 }
