@@ -450,33 +450,39 @@ public class RecipeChanges : ModSystem {
         r72.AddIngredient(ItemID.Bone, 5);
         r72.AddTile(TileID.Anvils);
         r72.Register();
-        Recipe recipe8 = Recipe.Create(ItemID.SkyMill, 1);
-        recipe8.AddIngredient(ItemID.SunplateBlock, 10);
-        recipe8.AddIngredient(ItemID.Cloud, 5);
-        recipe8.AddIngredient(ItemID.RainCloud, 3);
-        recipe8.AddTile(TileID.Anvils);
-        recipe8.Register();
-        Recipe recipe9 = Recipe.Create(2198, 1);
-        recipe9.AddRecipeGroup(anyIceBlock, 25);
-        recipe9.AddIngredient(ItemID.SnowBlock, 15);
-        recipe9.AddRecipeGroup("IronBar", 3);
-        recipe9.AddTile(TileID.Anvils);
-        recipe9.Register();
-        Recipe recipe10 = Recipe.Create(ItemID.CatBast, 1);
-        recipe10.AddRecipeGroup("IronBar", 7);
-        recipe10.AddRecipeGroup(anyGoldBar, 3);
-        recipe10.AddIngredient(ItemID.Ruby, 1);
-        recipe10.AddTile(TileID.Anvils);
-        recipe10.Register();
-        Recipe recipe11 = Recipe.Create(ItemID.EncumberingStone, 1);
-        recipe11.AddIngredient(ItemID.StoneBlock, 100);
-        recipe11.AddTile(TileID.Anvils);
-        recipe11.Register();
-        Recipe recipe12 = Recipe.Create(ItemID.DesertMinecart, 1);
-        recipe12.AddIngredient(ItemID.SandstoneBrick, 20);
-        recipe12.AddRecipeGroup(anyGoldBar, 6);
-        recipe12.AddRecipeGroup("IronBar", 3);
-        recipe12.AddTile(TileID.Anvils);
-        recipe12.Register();
+        Recipe r73 = Recipe.Create(ItemID.SkyMill, 1);
+        r73.AddIngredient(ItemID.SunplateBlock, 10);
+        r73.AddIngredient(ItemID.Cloud, 5);
+        r73.AddIngredient(ItemID.RainCloud, 3);
+        r73.AddTile(TileID.Anvils);
+        r73.Register();
+        Recipe r74 = Recipe.Create(2198, 1);
+        r74.AddRecipeGroup(anyIceBlock, 25);
+        r74.AddIngredient(ItemID.SnowBlock, 15);
+        r74.AddRecipeGroup("IronBar", 3);
+        r74.AddTile(TileID.Anvils);
+        r74.Register();
+        Recipe r75 = Recipe.Create(ItemID.CatBast, 1);
+        r75.AddRecipeGroup("IronBar", 7);
+        r75.AddRecipeGroup(anyGoldBar, 3);
+        r75.AddIngredient(ItemID.Ruby, 1);
+        r75.AddTile(TileID.Anvils);
+        r75.Register();
+        Recipe r76 = Recipe.Create(ItemID.EncumberingStone, 1);
+        r76.AddIngredient(ItemID.StoneBlock, 100);
+        r76.AddTile(TileID.Anvils);
+        r76.Register();
+        Recipe r77 = Recipe.Create(ItemID.DesertMinecart, 1);
+        r77.AddIngredient(ItemID.SandstoneBrick, 20);
+        r77.AddRecipeGroup(anyGoldBar, 6);
+        r77.AddRecipeGroup("IronBar", 3);
+        r77.AddTile(TileID.Anvils);
+        r77.Register();
+        
+        //Alt. Leather
+        Recipe r78 = Recipe.Create(ItemID.Leather, 1);
+        r78.AddIngredient(ItemID.Vertebrae, 5);
+        r78.AddTile(TileID.WorkBenches);
+        r78.Register();
     }
 }
