@@ -1,4 +1,4 @@
 displayName = Calamity QOL for Vanilla
 author = Pannoniae
-version = 0.4.4
+version = 0.5
 includeSource = true
