@@ -1,1 +1,2 @@
-- Fix NPC shops (potion selling) for the declarative shop system.
+- Added alternate Leather recipe
+- Added hook for adding custom NPC buttons. This will be exposed to other modders properly soon, for now just call the QOLHooks.SetChatButtons.
